# learnopengl

./: .gitignore  CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  shader.cpp  triangle.cpp  window.cpp
hello_triangle/: CMakeLists.txt  main.cpp
hello_triangle_ex1/: CMakeLists.txt  main.cpp
hello_triangle_ex1/.cache/clangd/index/: boing.c.B97B6F09DD5F7B6C.idx  egl_context.h.9B67D982DBE5B62E.idx  empty.c.9F9C19E3573313CE.idx  getopt.h.64EA9ABE8BE14DA4.idx  gl.h.BF7A56BAAE46EB76.idx  glad.c.1B059350DF2ABE11.idx  glad_vulkan.c.E24164733C5D92FA.idx  glfw3.h.34C5C0EC78AF50DA.idx  glfwinfo.c.082D86B179B468D6.idx  glx_context.c.A63CED2DFCAD325E.idx  heightmap.c.B46164D5450CB937.idx  icon.c.F67CBA7CCCC9C7A0.idx  iconify.c.DC7139A227A835B0.idx  input.c.79BD9B693F40F57C.idx  internal.h.745D20D2504A8FF4.idx  joysticks.c.7E77AB44835070C9.idx  khrplatform.h.C33AACDC61665B56.idx  main.cpp.93D5016CA49F38F0.idx  monitors.c.38CB8931E51086DA.idx  msaa.c.848F25AE9EC0CC1A.idx  offscreen.c.B212B99EC815E3A2.idx  osmesa_context.c.62764B72F80D81D1.idx  osmesa_context.h.1EF0A22F411DE786.idx  posix_thread.c.969177359333BA82.idx  reopen.c.07294C9B8CA382CF.idx  stb_image_write.h.83812BD02D367010.idx  threads.c.68C4A6B9C98B389A.idx  tinycthread.h.523752CB974AF466.idx  title.c.AAF69E11B0E5FE9C.idx  triangle-vulkan.c.03FC5733269DE4E2.idx  vulkan.c.B38345F792841D1E.idx  vulkan.h.23BF6087FA86BB4B.idx  wave.c.DE9EB3D446EF6910.idx  windows.c.12830A6F20DEDDFA.idx  x11_init.c.F7DFAB6352A689BB.idx  x11_monitor.c.59DD06A72411A683.idx
hello_triangle_ex2/: CMakeLists.txt  main.cpp
hello_triangle_ex2/.cache/clangd/index/: boing.c.9EBC8646B528F956.idx  clipboard.c.3AFB7746F0147642.idx  clipboard.c.903457DC395F3B7B.idx  context.c.2F2CFE754B7C506B.idx  context.c.7D99BC1A2876931C.idx  cursor.c.86ECF4AF0C895F98.idx  cursor.c.D58468954346F97B.idx  egl_context.c.82FB677A82A08C5F.idx  egl_context.c.9E1017851559552D.idx  egl_context.h.E29B1810D5D36714.idx  empty.c.A4C1C4F10FFD71B5.idx  events.c.07661AFFF83AB136.idx  events.c.2AC629C33E5AFC44.idx  gamma.c.660B19D15656BB19.idx  gamma.c.9EFF803B937C4E5A.idx  gears.c.4DFA27A0197E7D82.idx  gears.c.7C4C1DF19369D836.idx  getopt.c.61F84EE3A5548388.idx  getopt.c.6FE03F644E20FC05.idx  getopt.h.8D9AC2A2F63D46E0.idx  gl.h.668C26A4DA2C0DA6.idx  glad.c.434E57413E9ADB38.idx  glad.h.2A435F8EE7C4BD35.idx  glad.h.A754DC02695D4F2E.idx  glad_gl.c.061C14F95088E533.idx  glad_gl.c.A597ABC9610CAB5B.idx  glad_vulkan.c.85A4B543D1D1769C.idx  glfw3.h.C0817364A96786B8.idx  glfwinfo.c.65BDB2B4CA6270B6.idx  glx_context.c.0F9410476B74ABD1.idx  glx_context.h.98DEFEBDD00F18E2.idx  glx_context.h.D67151188330003F.idx  heightmap.c.067B1C6BC011969F.idx  icon.c.BD0A55A11775764F.idx  iconify.c.F3074333C2F0E9A5.idx  init.c.088E1AD171C5E4C4.idx  init.c.FDED63248A7F0873.idx  input.c.3B6FF428AD195A22.idx  inputlag.c.24FA9E199DFBEDF3.idx  inputlag.c.46E15A32FA39553F.idx  (+71 more)
hello_triangle_ex3/: CMakeLists.txt  main.cpp
hello_window/: CMakeLists.txt
shaders/: shaders.cpp
